--- a/src/styles/Feature.scss
+++ b/src/styles/Feature.scss
@@ -1,6 +1,8 @@
+@import "base";
+
 .feature-icon {
     width: 100px;
-    border: 10px solid #00bc77;
+    border: 10px solid $color1;
     border-radius: 50%;
     padding: 1rem;
 }
@@ -11,7 +13,7 @@
 }
 
 .feature-item-title {
-    color: #222;
+    color: $color3;
     font-size: 1.25rem;
     font-weight: bold;
     margin-bottom: 0.5rem;
