--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,7 +5,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  color: #2c3e50;
+  color: $color5;
 }
 
 body {
@@ -85,16 +85,8 @@ body {
   flex: 1;
 }
 
-.edit-button {
-  border-color: #00bc77;
-  background-color: #00bc77;
-  color: #fff;
-  font-weight: bold;
-  padding: 10px;
-}
-
 .header {
-  color: #fff;
+  color: $color2;
   margin-bottom: 2rem;
 }
 
