--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -3,7 +3,7 @@
 .footer {
     display: flex;
     justify-content: center;
-    border-top: 2px solid #ccc;
+    border-top: 2px solid $color5;
     padding: 2rem 0 1.5rem;
 }
 
