--- a/src/styles/Hero.scss
+++ b/src/styles/Hero.scss
@@ -11,7 +11,7 @@
     position: relative;
     top: 2rem;
     width: 200px;
-    background: white;
+    background: $color2;
     padding: 2rem;
     text-align: left;
     margin: 0 auto;
