--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,42 +1,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-.navigation {
-  width: 100%;
+.main-nav {
   display: flex;
-  flex-direction: row;
-  vertical-align: middle;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 20px;
+}
+
+.main-nav a {
+  font-weight: bold;
+  color: #2c3e50;
+}
+
+.main-nav a.router-link-exact-active {
+  color: #42b983;
+}
+
+.main-nav-item {
+  text-decoration: none;
+  margin-right: 0.5rem;
+}
+
+.main-nav-item:hover {
+  text-decoration: underline;
+}
+
+.main-nav-logo {
+  display: flex;
   align-items: center;
 }
-.navigation-list {
-  display: flex;
-  flex-direction: row;
-  list-style: none;
-  justify-content: space-around;
-  width: 100%;
-  align-items: center;
-}
-.navigation-list-element {
-  font-size: 24px;
-  font-weight: 500;
-  margin-left: 30px;
-}
-@media screen and (max-width: 992px) {
-  .navigation-list-element {
-    font-size: 18px;
-  }
-}
-.navigation-list-element-link-active {
-  text-decoration: underline;
-  color: #fff;
-}
-.navigation-list-element-link-active:hover {
-  text-decoration: none;
-  color: #ff0000;
-}
-.navigation-list-element-link-inactive {
-  text-decoration: none;
-  color: #fff;
-}
-.navigation-list-element-link-inactive:hover {
-  text-decoration: underline;
-  color: #ff0000;
+
+.main-nav-logo-image {
+  max-width: 100%;
+  width: 200px;
 }/*# sourceMappingURL=Nav.css.map */
