--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -1,43 +1,36 @@
 @import "base";
 
-.navigation {
-    width: 100%;
+.main-nav {
     display: flex;
-    flex-direction: row;
-    vertical-align: middle;
+    justify-content: space-between;
     align-items: center;
+    padding: 5px 20px;
+}
 
-    &-list {
-        display: flex;
-        flex-direction: row;
-        list-style: none;
-        justify-content: space-around;
-        width: 100%;
-        align-items: center;
-        &-element {
-            font-size: 24px;
-            font-weight: 500;
-            margin-left: 30px;
+.main-nav a {
+    font-weight: bold;
+    color: $color5;
+}
 
-            @media screen and (max-width: ($maxsize_medium)) {
-                font-size: 18px;
-            }
-            &-link-active {
-                text-decoration: underline;
-                color: $color2;
-                &:hover {
-                    text-decoration: none;
-                    color: $color4;
-                }
-            }
-            &-link-inactive {
-                text-decoration: none;
-                color: $color2;
-                &:hover {
-                    text-decoration: underline;
-                    color: $color4;
-                }
-            }
-        }
-    }
+.main-nav a.router-link-exact-active {
+    color: $color6;
+}
+
+.main-nav-item {
+    text-decoration: none;
+    margin-right: 0.5rem;
+}
+
+.main-nav-item:hover {
+    text-decoration: underline;
+}
+
+.main-nav-logo {
+    display: flex;
+    align-items: center;
+}
+
+.main-nav-logo-image {
+    max-width: 100%;
+    width: 200px;
 }
