--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,20 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-$gridspace: 10px;
-$margin_container: 40px;
-$margin_component: 20px;
-
-$color1: #000;
-$color2: #fff;
-$color3: #f6f6f6;
-$color4: #ff0000;
-$color5: #fbeae9;
-$color6: #e9f4fb;
-$color7: #fbf6e5;
-$color8: #fbeaef;
-$color9: #282d30;
-$color10: #fbfbfb;
-$color11: #911e1e;
+$color1: #00bc77;
+$color2: #ffffff;
+$color3: #222222;
+$color4: #000000;
+$color5: #2c3e50;
+$color6: #42b983;
 
 // Queries
 
