Form Slice store

--- a/src/styles/Account.css
+++ b/src/styles/Account.css
@@ -1,1 +1,11 @@
-/*# sourceMappingURL=Account.css.map */
+@media (min-width: 720px) {
+  .account {
+    flex-direction: row;
+  }
+  .account-content-wrapper.cta {
+    flex: 0;
+  }
+  .transaction-button {
+    width: 200px;
+  }
+}/*# sourceMappingURL=Account.css.map */
