--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,115 +1,118 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-@import "base";
-
 html {
-	font-family: Avenir, Helvetica, Arial, sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	text-align: center;
-	color: #2c3e50;
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  color: #2c3e50;
 }
 
 body {
-	margin: 0;
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .main {
-	flex: 1;
+  flex: 1;
+  height: calc(100vh - 50px - 100px);
+}
+
+.main-container {
+  height: 100%;
 }
 
 .bg-dark {
-	background-color: #12002b;
+  background-color: #12002b;
 }
 
 .sr-only {
-	border: 0 !important;
-	clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
-	-webkit-clip-path: inset(50%) !important;
-	clip-path: inset(50%) !important; /* 2 */
-	height: 1px !important;
-	margin: -1px !important;
-	overflow: hidden !important;
-	padding: 0 !important;
-	position: absolute !important;
-	width: 1px !important;
-	white-space: nowrap !important; /* 3 */
+  border: 0 !important;
+  clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
+  -webkit-clip-path: inset(50%) !important;
+  clip-path: inset(50%) !important; /* 2 */
+  height: 1px !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  padding: 0 !important;
+  position: absolute !important;
+  width: 1px !important;
+  white-space: nowrap !important; /* 3 */
 }
 
 .features {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (min-width: 920px) {
-	.features {
-		flex-direction: row;
-	}
+  .features {
+    flex-direction: row;
+  }
 }
 .account {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	border: 1px solid black;
-	background-color: $color1;
-	width: 80%;
-	margin: 0 auto;
-	flex-direction: column;
-	padding: 1.5rem;
-	box-sizing: border-box;
-	text-align: left;
-	margin-bottom: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid black;
+  background-color: #fff;
+  width: 80%;
+  margin: 0 auto;
+  flex-direction: column;
+  padding: 1.5rem;
+  box-sizing: border-box;
+  text-align: left;
+  margin-bottom: 2rem;
 }
 
 .account-amount {
-	margin: 0;
-	font-size: 2.5rem;
-	font-weight: bold;
+  margin: 0;
+  font-size: 2.5rem;
+  font-weight: bold;
 }
 
 .account-amount-description {
-	margin: 0;
+  margin: 0;
 }
 
 .account-title {
-	margin: 0;
-	padding: 0;
-	font-size: 1rem;
-	font-weight: normal;
+  margin: 0;
+  padding: 0;
+  font-size: 1rem;
+  font-weight: normal;
 }
 
 .account-content-wrapper {
-	width: 100%;
-	flex: 1;
+  width: 100%;
+  flex: 1;
 }
 
 .header {
-	color: #fff;
-	margin-bottom: 2rem;
+  color: #ffffff;
+  margin-bottom: 2rem;
 }
 
 .transaction-button {
-	display: block;
-	width: 100%;
-	padding: 8px;
-	font-size: 1.1rem;
-	font-weight: bold;
-	margin-top: 1rem;
-	border-color: #00bc77;
-	background-color: #00bc77;
-	color: $color3;
+  display: block;
+  width: 100%;
+  padding: 8px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-top: 1rem;
+  border-color: #00bc77;
+  background-color: #00bc77;
+  color: #fff;
 }
 
 @media (min-width: 720px) {
-	.account {
-		flex-direction: row;
-	}
-	.account-content-wrapper.cta {
-		flex: 0;
-	}
-	.transaction-button {
-		width: 200px;
-	}
-} /*# sourceMappingURL=App.css.map */
+  .account {
+    flex-direction: row;
+  }
+  .account-content-wrapper.cta {
+    flex: 0;
+  }
+  .transaction-button {
+    width: 200px;
+  }
+}/*# sourceMappingURL=App.css.map */
