--- a/src/styles/ButtonUser.css
+++ b/src/styles/ButtonUser.css
@@ -1,1 +1,16 @@
-/*# sourceMappingURL=ButtonUser.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+.edit-button {
+  border-color: #00bc77;
+  background-color: #00bc77;
+  color: #ffffff;
+  font-weight: bold;
+  padding: 10px;
+}
+
+.form-button {
+  border-color: #00bc77;
+  background-color: #00bc77;
+  color: #ffffff;
+  font-weight: bold;
+  padding: 10px;
+}/*# sourceMappingURL=ButtonUser.css.map */
