--- a/src/styles/Feature.css
+++ b/src/styles/Feature.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 .feature-icon {
   width: 100px;
   border: 10px solid #00bc77;
@@ -11,7 +12,7 @@
 }
 
 .feature-item-title {
-  color: #222;
+  color: #222222;
   font-size: 1.25rem;
   font-weight: bold;
   margin-bottom: 0.5rem;
