--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -2,8 +2,9 @@
 .footer {
   display: flex;
   justify-content: center;
-  border-top: 2px solid #ccc;
+  border-top: 2px solid #2c3e50;
   padding: 2rem 0 1.5rem;
+  height: 50px;
 }
 
 .footer-text {
