--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     border-top: 2px solid $color5;
     padding: 2rem 0 1.5rem;
+    height: 50px;
 }
 
 .footer-text {
