--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -3,7 +3,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5px 20px;
+  padding: 7px 20px;
+  height: 50px;
 }
 
 .main-nav a {
