--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -4,7 +4,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5px 20px;
+    padding: 7px 20px;
+    height: 50px;
 }
 
 .main-nav a {
