--- a/src/styles/InputUser.css
+++ b/src/styles/InputUser.css
@@ -1,1 +1,10 @@
-/*# sourceMappingURL=InputUser.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+.input-user {
+  border-color: #222222;
+  background-color: #ffffff;
+  color: #222222;
+  font-weight: bold;
+  padding: 10px;
+  width: 200px;
+  height: 20px;
+}/*# sourceMappingURL=InputUser.css.map */
