--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -10,6 +10,11 @@
 .main-nav a {
   font-weight: bold;
   color: #2c3e50;
+  margin-left: 10px;
+}
+
+.main-nav i {
+  margin-right: 5px;
 }
 
 .main-nav a.router-link-exact-active {
