--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -11,6 +11,11 @@
 .main-nav a {
     font-weight: bold;
     color: $color5;
+    margin-left: 10px;
+}
+
+.main-nav i {
+    margin-right: 5px;
 }
 
 .main-nav a.router-link-exact-active {
