--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -16,7 +16,11 @@ body {
 
 .main {
   flex: 1;
-  height: calc(100vh - 50px - 100px);
+}
+@media (min-width: 768px) {
+  .main {
+    height: calc(100vh - 50px - 100px);
+  }
 }
 
 .main-container {
@@ -86,11 +90,6 @@ body {
 .account-content-wrapper {
   width: 100%;
   flex: 1;
-}
-
-.header {
-  color: #ffffff;
-  margin-bottom: 2rem;
 }
 
 .transaction-button {
