--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,36 +1,10 @@
 @import "base";
 
-.main-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 20px;
-}
+.header {
+    color: $color2;
+    margin-bottom: 2rem;
 
-.main-nav a {
-    font-weight: bold;
-    color: $color5;
-}
-
-.main-nav a.router-link-exact-active {
-    color: $color6;
-}
-
-.main-nav-item {
-    text-decoration: none;
-    margin-right: 0.5rem;
-}
-
-.main-nav-item:hover {
-    text-decoration: underline;
-}
-
-.main-nav-logo {
-    display: flex;
-    align-items: center;
-}
-
-.main-nav-logo-image {
-    max-width: 100%;
-    width: 200px;
+    &-title {
+        margin: 0;
+    }
 }
