--- a/src/styles/SignInContent.css
+++ b/src/styles/SignInContent.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 .sign-in-button {
   display: block;
   width: 100%;
@@ -7,20 +8,21 @@
   margin-top: 1rem;
   border-color: #00bc77;
   background-color: #00bc77;
-  color: #fff;
+  color: #ffffff;
 }
 
 .sign-in-content {
   box-sizing: border-box;
-  background-color: white;
+  background-color: #ffffff;
   width: 300px;
   margin: 0 auto;
-  margin-top: 3rem;
   padding: 2rem;
 }
-
-.sign-in-icon {
+.sign-in-content-icon {
   font-size: 5rem;
+}
+.sign-in-content-title {
+  margin: 0;
 }
 
 .input-remember {
@@ -45,4 +47,4 @@
 .input-wrapper input {
   padding: 5px;
   font-size: 1.2rem;
-}/*# sourceMappingURL=SignInContent.css.map */
+}/*# sourceMappingURL=Signincontent.css.map */
